Temp fix bootstrap overflow issue

--- a/assets/css/Navbar-Right-Links-Dark.css
+++ b/assets/css/Navbar-Right-Links-Dark.css
@@ -55,9 +55,6 @@
   border-radius: 50%;
 }
 
-.navbar {
-}
-
 .nav-item {
   font-weight: bold;
 }
